# truck-packer-vst

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
packaged-plugins/: README.txt
packaging/: DMG_README.txt  INSTALL.txt  TruckPacker.iss  build_mac_dmg.sh  build_mac_pkg.sh  build_win_installer.ps1  stage_plugins.cmake
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TruckPackerWebView.cpp  TruckPackerWebView.h
